@@ -257,6 +257,10 @@
           <artifactId>maven-clean-plugin</artifactId>
           <version>2.4</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.rat</groupId>
+          <artifactId>apache-rat-plugin</artifactId>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -429,6 +433,7 @@
         <artifactId>maven-project-info-reports-plugin</artifactId>
         <version>2.1.2</version>
       </plugin>
+      <!-- Disabled for now.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
@@ -452,6 +457,7 @@
           <xmlOutput>true</xmlOutput>
         </configuration>
       </plugin>
+      -->
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
         <version>2.1</version>
@@ -472,16 +478,19 @@
           <maxmemory>1024m</maxmemory>
         -->
       </plugin>
+      <!--Disabled for now.
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
         <version>2.3</version>
       </plugin>
+      -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jxr-plugin</artifactId>
         <version>2.1</version>
       </plugin>
+      <!-- Disabled for now
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jdepend-maven-plugin</artifactId>
@@ -507,17 +516,22 @@
         <version>2.6.3</version>
       </plugin>
       <plugin>
-        <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>2.5</version>
-      </plugin>
-      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>taglist-maven-plugin</artifactId>
         <version>2.4</version>
       </plugin>
+      -->
+      <plugin>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.5</version>
+      </plugin>
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>2.1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.rat</groupId>
+        <artifactId>apache-rat-plugin</artifactId>
       </plugin>
     </plugins>
   </reporting>
